# mandelbrotesque

./: CMakeLists.txt  README.md
.cache/clangd/index/: main.cxx.2F39A45134CC5087.idx  raylib_renderer.hxx.2BF1A149F01E008A.idx  raylib_window.hxx.64CF9A7CAFC1C6DD.idx  type_alias.hxx.CFF08DA1C794E9D8.idx
source/: main.cxx
source/shaders/: mandelbrot.frag
